--- a/requirements.txt
+++ b/requirements.txt
@@ -39,8 +39,15 @@ beautifulsoup4==4.12.2
 # Development and Testing
 pytest==7.4.0
 pytest-cov==4.1.0
+pytest-benchmark==4.0.0
+pytest-mock==3.11.1
+pytest-xdist==3.3.1
+unittest-xml-reporting==3.2.0
+coverage==7.2.7
 black==23.7.0
 flake8==6.0.0
+psutil==5.9.5
+memory-profiler==0.60.0
 
 # Parallel Processing
 joblib==1.3.1
